fix : removed duplicate functions, fixed cart-validation adresses input overflowing

--- a/PP2I1/src/frontend/static/css/cart_validation.css
+++ b/PP2I1/src/frontend/static/css/cart_validation.css
@@ -72,8 +72,9 @@
 
 .itemPic{
   border-radius: 10px;
-  max-width: 150px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 150px;
+  height:auto;
 }
 
 .itemPrice{
